# example-poetry-azure

./: azure-pipelines.yml  pyproject.toml
.ap/: README.md
.ci/scripts/: python.py
